# vgc-bench

./: .gitignore  .gitmodules  README.md  eval.sh  heatmaps.py  play.ps1  play.sh  pretrain.sh  pyproject.toml  requirements.txt  train.sh  train_matchup.ps1  train_matchup.sh
.github/workflows/: tests.yml
data/: abilities.json  items.json  moves.json
dexter/: pretrain.py  train.py
dexter/src/: agent.py  env.py  policy.py  utils.py
integration-tests/: conftest.py  test_battles.py  test_logs2trajs.py  test_pipeline.py  test_policy.py  test_pretrain.py  test_teams.py
integration_tests/: conftest.py  fixture_logs.json  test_battles.py  test_pipeline.py
teams/reg_a/: 1.txt  10.txt  100.txt  102.txt  104.txt  105.txt  106.txt  109.txt  11.txt  110.txt  111.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  12.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  135.txt  136.txt  137.txt  138.txt  139.txt  14.txt  140.txt  (+332 more)
teams/reg_b/: 651.txt  660.txt  661.txt  664.txt  665.txt  672.txt  677.txt  678.txt  680.txt  691.txt  692.txt  693.txt  695.txt  701.txt  707.txt  708.txt  709.txt  711.txt  716.txt  719.txt  720.txt  724.txt  725.txt  730.txt  731.txt  735.txt  737.txt  738.txt  739.txt  740.txt  741.txt  744.txt  748.txt  749.txt  750.txt  751.txt  752.txt  753.txt  754.txt  755.txt  (+76 more)
teams/reg_c/: C102.txt  C108.txt  C109.txt  C11.txt  C113.txt  C114.txt  C115.txt  C117.txt  C118.txt  C12.txt  C120.txt  C125.txt  C13.txt  C130.txt  C131.txt  C132.txt  C133.txt  C134.txt  C136.txt  C137.txt  C138.txt  C139.txt  C14.txt  C140.txt  C141.txt  C142.txt  C143.txt  C145.txt  C146.txt  C147.txt  C148.txt  C149.txt  C15.txt  C150.txt  C151.txt  C152.txt  C154.txt  C155.txt  C159.txt  C160.txt  (+261 more)
teams/reg_d/: D1.txt  D100.txt  D101.txt  D104.txt  D105.txt  D106.txt  D107.txt  D108.txt  D109.txt  D11.txt  D110.txt  D112.txt  D113.txt  D114.txt  D115.txt  D116.txt  D117.txt  D118.txt  D119.txt  D12.txt  D120.txt  D121.txt  D124.txt  D125.txt  D126.txt  D127.txt  D128.txt  D129.txt  D13.txt  (+257 more)
tests/: conftest.py  fixture_battle_log.json  test_llm.py  test_logs2trajs.py  test_policy.py  test_pretrain.py  test_scrape_logs.py  test_scrape_teams.py  test_teams.py  test_utils.py  test_visualize.py
unit-tests/: conftest.py  test_llm.py  test_logs2trajs.py  test_scrape_teams.py  test_teams.py  test_utils.py
unit_tests/: test_logs2trajs.py  test_mcts_converter.py  test_policy.py  test_scrape_logs.py  test_scrape_teams.py  test_teams.py  test_utils.py  test_visualize.py
vgc_bench/: eval.py  logs2trajs.py  play.py  pretrain.py  scrape_data.py  scrape_logs.py  scrape_teams.py  sim_test.py  simulate.py  train.py  visualize.py
(+4611 files in other folders)
